# tarea_02_19-10072

opengl/: CMakeLists.txt  README.md  compile_flags.txt
opengl/dependencies/glad/: glad.c  glad.h
opengl/src/: main.cpp
threejs/: README.md  package-lock.json  package.json
threejs/src/: main.ts
webgl/: README.md  index.html  main.js  package-lock.json
